--- a/example.ipynb
+++ b/example.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Classifying digits e.g. y = 5 v.s. all other numbers between 0 to 9. The algorithm queries agent to label chosen points for n_budget =200 times, then creates a classifer to label rest of the points itself."
+    "Classifying digits e.g. y = 5 v.s. all other numbers between 0 to 9. The algorithm queries agent to label chosen points for n_budget =200 times, then creates a classifier to label rest of the points itself."
    ]
   },
   {
