added the cloned the repo cell to give Colab access

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clone the repo so Colab can access all the files, including utilities.py\n",
+    "!git clone https://github.com/PouyaRepos/sequential_anomaly_detection.git\n",
+    "%cd sequential_anomaly_detection\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
